# poke-battle-sim

./: .gitignore  LICENSE  README.md  battle.py  battlefield.py  global_data.py  global_settings.py  move.py  poke_sim.py  pokemon.py  process_ability.py  process_item.py  process_move.py  pyproject.toml  setup.cfg  start.py  trainer.py
.github/workflows/: python-app.yml
csv/: move_list.csv  natures.csv  type_effectiveness.csv
docs/items/: item_actions.txt
docs/moves/: move_effects.txt
docs/starting-guide/: 01_intro.txt  02_setup.txt  03_simulation.txt  04_checks.txt  05_randomization.txt
poke-battle-sim/: battle.py  process_ability.py  process_item.py  process_move.py  trainer.py
poke-battle-sim/csv/: pokemon_stats.csv
poke_battle_sim/: __init__.py  poke_sim.py
poke_battle_sim/conf/: global_data.py  global_settings.py
poke_battle_sim/core/: battle.py  battlefield.py  move.py  pokemon.py  trainer.py
poke_battle_sim/csv/: move_list.csv
poke_battle_sim/data/: abilities.csv  items_gen4.csv  move_list.csv
poke_battle_sim/util/: process_ability.py  process_item.py  process_move.py
tests/: test_battle.py  test_pokemon.py  test_trainer.py
tests/tests_process_item/: test_can_use_item.py  test_use_item.py
