[metadata]
name = poke-battle-sim
version = 0.1.7
author = Vincent Johnson
author_email = vincentjohnson1155@gmail.com
url = https://github.com/hiimvincent/poke-battle-sim
description = An open source Python package that provides efficient, customizable simulation of Pokemon battles
long_description = file: README.md
long_description_content_type = text/markdown
keywords = poke-battle-sim, pokemon, battle simulation, generation iv,
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.package_data]
* = *.csv, *.txt 
